--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,20 +1,17 @@
 {
   "manifest_version": 3,
   "name": "Auto-Apply MVP",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "One-click job applications, built with speed.",
   "permissions": [
-    "storage"
+    "storage",
+    "scripting"
   ],
   "host_permissions": [
     "<all_urls>"
   ],
   "action": {
-    "default_popup": "popup.html",
-    "default_icon": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png"
-    }
+    "default_popup": "popup.html"
   },
   "icons": {
     "16": "icons/icon16.png",
@@ -23,8 +20,13 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"],
-      "css": ["style.css"]
+      "js": ["content.js"]
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["modules/linkedin.js", "modules/greenhouse.js"],
+      "matches": ["<all_urls>"]
     }
   ]
 }
