--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,11 +1,10 @@
 {
   "manifest_version": 3,
   "name": "Auto-Apply MVP",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "One-click job applications, built with speed.",
   "permissions": [
-    "storage",
-    "scripting"
+    "storage"
   ],
   "host_permissions": [
     "<all_urls>"
@@ -17,16 +16,25 @@
     "16": "icons/icon16.png",
     "48": "icons/icon48.png"
   },
+  "background": {
+    "service_worker": "background.js"
+  },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["content.js"],
+      "css": ["style.css"]
     }
   ],
   "web_accessible_resources": [
     {
-      "resources": ["modules/linkedin.js", "modules/greenhouse.js"],
-      "matches": ["<all_urls>"]
+      "resources": [
+        "modules/linkedin.js",
+        "modules/greenhouse.js"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
     }
   ]
 }
